unpackaged/main/default/objects/Course__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Course valid and active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>