unpackaged/main/default/objects/Course__c/fields/Agenda_Link__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Link__c</fullName>
    <inlineHelpText>This will be sent out to Students attending Engagements for this Course.</inlineHelpText>
    <label>Agenda Link</label>
    <type>Url</type>
</CustomField>