unpackaged/main/default/objects/Course__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>