unpackaged/main/default/objects/Course__c/fields/Class_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Class_Requirements__c</fullName>
    <label>Class Requirements</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>