unpackaged/main/default/objects/Course__c/fields/Composite_PTA__c.field-meta.xml
<CustomField>
    <fullName>Composite_PTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Composite &amp; PTA</label>
    <type>Checkbox</type>
</CustomField>