unpackaged/main/default/objects/Course__c/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <label>Course Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>