unpackaged/main/default/objects/Course__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <externalId>true</externalId>
    <label>Course ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>