unpackaged/main/default/objects/Course__c/fields/CourseID_18__c.field-meta.xml
<CustomField>
    <fullName>CourseID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CourseID (18)</label>
    <type>Text</type>
</CustomField>