unpackaged/main/default/objects/Course__c/fields/Educational_Program__c.field-meta.xml
<CustomField>
    <fullName>Educational_Program__c</fullName>
    <label>Educational Program</label>
    <referenceTo>Educational_Program__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>