unpackaged/main/default/objects/Course__c/fields/GOA__c.field-meta.xml
<CustomField>
    <fullName>GOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GOA</label>
    <type>Checkbox</type>
</CustomField>