unpackaged/main/default/objects/Course__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <label>Homework</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>