unpackaged/main/default/objects/Course__c/fields/NCM_Website_Page__c.field-meta.xml
<CustomField>
    <fullName>NCM_Website_Page__c</fullName>
    <description>URL of the page on the .Com website this course is defined.</description>
    <inlineHelpText>URL of the page on the .Com website this course is defined.</inlineHelpText>
    <label>NCM Website Page</label>
    <type>Url</type>
</CustomField>