unpackaged/main/default/objects/Course__c/recordTypes/OnSite.recordType-meta.xml
<RecordType>
    <fullName>OnSite</fullName>
    <active>true</active>
    <label>OnSite</label>
</RecordType>