unpackaged/main/default/objects/Course__c/recordTypes/Virtual_Training.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Training</fullName>
    <active>true</active>
    <label>Virtual Training</label>
</RecordType>